add second recipe and corresponding photo

--- a/index.html
+++ b/index.html
@@ -8,5 +8,8 @@
 
     <body>
         <h1>Odin Recipes</h1>
+
+        <p><a href="./recipes/bread.html" target="_blank" rel="noopener noreferrer">Lemon Blueberry Bread</a></p>
+        <p><a href="./recipes/toast.html" target="_blank" rel="noopener noreferrer">Scrambled Eggs and Avocado Toast</a></p>
     </body>
 </html>
