add third recipe and picture

--- a/recipes/toast.html
+++ b/recipes/toast.html
@@ -12,8 +12,7 @@
 
         <p>Quick and easy breakfast that only takes 10-15 minutes to prepare! Scrambled eggs are pretty light
             but the avocado toast makes it a little more filling with some added protein. The cheese on top adds
-            some extra flavor as well.
-        </p>
+            some extra flavor as well.</p>
 
         <h3>Ingredients</h3>
         <ul>
