--- a/index.html
+++ b/index.html
@@ -8,8 +8,10 @@
 
     <body>
         <h1>Odin Recipes</h1>
-
-        <p><a href="./recipes/bread.html" target="_blank" rel="noopener noreferrer">Lemon Blueberry Bread</a></p>
-        <p><a href="./recipes/toast.html" target="_blank" rel="noopener noreferrer">Scrambled Eggs and Avocado Toast</a></p>
+        <ul>
+            <li><a href="./recipes/bread.html" target="_blank" rel="noopener noreferrer">Lemon Blueberry Bread</a></li>
+            <li><a href="./recipes/toast.html" target="_blank" rel="noopener noreferrer">Scrambled Eggs and Avocado Toast</a></li>
+            <li><a href="./recipes/omelette.html" target="_blank" rel="noopener noreferrer">Chicken, Cheese, and Vegetable Omlette</a></li>
+        </ul>
     </body>
 </html>
