add basic css elements

--- a/recipes/omelette.html
+++ b/recipes/omelette.html
@@ -3,40 +3,45 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <title>Chicken, Cheese, and Vegetable Omlette</title>
+        <title>Chicken, Cheese, and Vegetable Omelette</title>
+        <link rel="stylesheet" href="../style.css" />
     </head>
 
     <body>
-        <h1>Chicken, Cheese, and Vegetable Omlette</h1>
+        <h1 class="title">Chicken, Cheese, and Vegetable Omelette</h1>
         <img src="../images/omelette.jpeg" alt="omelette that includes tomatoes, onions, coriander, chicken, and mozarella cheese"
         width=540 height=314>
 
         <p>My go-to omelette combination! I have very specific measurement preferences, but everything can be adjusted easily.</p>
 
-        <h3>Ingredients</h3>
-        <ul>
-            <li>3-4 eggs</li>
-            <li>1 tomato</li>
-            <li>0.125 onion</li>
-            <li>sprinkle of coriander</li>
-            <li>salt and pepper to taste</li>
-            <li>last night's leftover chicken</li>
-        </ul>
+        <div class="ingredients-box">
+            <h3>Ingredients</h3>
+            <ul>
+                <li>3-4 eggs</li>
+                <li>1 tomato</li>
+                <li>0.125 onion</li>
+                <li>sprinkle of coriander</li>
+                <li>salt and pepper to taste</li>
+                <li>last night's leftover chicken</li>
+            </ul>
+        </div>
 
-        <h3>Steps</h3>
-        <ol>
-            <li>Crack the eggs into a bowl.</li>
-            <li>Chop the tomato and onion and add to bowl. Beat well.</li>
-            <li>Add a sprinkle of coriander. Add salt and pepper to taste. Beat well.</li>
-            <li>Microwave leftover chicken and cut into small pieces. Add to bowl and beat well.</li>
-            <li>Place a small amount of oil on frying pan and allow it to warm up at medium to high heat. Tilt until the oil covers the whole pan.</li>
-            <li>Pour the egg mixture into the pan. When the edges start to solidify, run the spatula under them so that the 
-                omelette is not stuck to the pan.</li>
-            <li>Flip omelette and allow other side to cook once the bottom starts browning.</li>
-            <li>After the new bottom has been on the frying pan for about 30 seconds, add cheese to one half of the omelette.
-                Fold it in half and enjoy.
-            </li>
-        </ol>
+        <div class="steps-box">
+            <h3>Steps</h3>
+            <ol>
+                <li>Crack the eggs into a bowl.</li>
+                <li>Chop the tomato and onion and add to bowl. Beat well.</li>
+                <li>Add a sprinkle of coriander. Add salt and pepper to taste. Beat well.</li>
+                <li>Microwave leftover chicken and cut into small pieces. Add to bowl and beat well.</li>
+                <li>Place a small amount of oil on frying pan and allow it to warm up at medium to high heat. Tilt until the oil covers the whole pan.</li>
+                <li>Pour the egg mixture into the pan. When the edges start to solidify, run the spatula under them so that the 
+                    omelette is not stuck to the pan.</li>
+                <li>Flip omelette and allow other side to cook once the bottom starts browning.</li>
+                <li>After the new bottom has been on the frying pan for about 30 seconds, add cheese to one half of the omelette.
+                    Fold it in half and enjoy.
+                </li>
+            </ol>
+        </div>
 
     </body>
 </html>
