--- a/recipes/toast.html
+++ b/recipes/toast.html
@@ -4,37 +4,43 @@
     <head>
         <meta charset="UTF-8">
         <title>Scrambled Eggs and Avocado Toast</title>
+    
+        <link rel="stylesheet" href="../style.css" />
     </head>
 
     <body>
-        <h1>Scrambled Eggs and Avocado Toast</h1>
+        <h1 class="title">Scrambled Eggs and Avocado Toast</h1>
         <img src="../images/toast.jpg" alt="scrambled eggs and three avocado toast" width=584 height=467 >
 
         <p>Quick and easy breakfast that only takes 10-15 minutes to prepare! Scrambled eggs are pretty light
             but the avocado toast makes it a little more filling with some added protein. The cheese on top adds
             some extra flavor as well.</p>
 
-        <h3>Ingredients</h3>
-        <ul>
-            <li>3 slices bread</li>
-            <li>3 eggs</li>
-            <li>0.5 avocado</li>
-            <li>sprinkle of mozarella cheese</li>
-            <li>salt and pepper to taste</li>
-        </ul>
+        <div class="ingredients-box">
+            <h3>Ingredients</h3>
+            <ul>
+                <li>3 slices bread</li>
+                <li>3 eggs</li>
+                <li>0.5 avocado</li>
+                <li>sprinkle of mozarella cheese</li>
+                <li>salt and pepper to taste</li>
+            </ul>
+        </div>
 
-        <h3>Steps</h3>
-        <ol>
-            <li>Crack 3 eggs into a bowl and beat together.</li>
-            <li>Cut an avocado in half.</li>
-            <li>Toast 3 slices of bread.</li>
-            <li>Pour the egg mixture into a frying pan and as it starts to solidify, push into
-                the center so as to create a "fluffy" texture for the scrambled eggs.</li>
-            <li>When the toast is browned to your liking, spread the avocado onto each slice</li>
-            <li>Take some of the scrambled eggs and place onto the avocado spread</li>
-            <li>Sprinkle on some mozarella cheese on top of each toast</li>
-            <li>Add salt and pepper to taste</li>
-        </ol>
+        <div class="steps-box">
+            <h3>Steps</h3>
+            <ol>
+                <li>Crack 3 eggs into a bowl and beat together.</li>
+                <li>Cut an avocado in half.</li>
+                <li>Toast 3 slices of bread.</li>
+                <li>Pour the egg mixture into a frying pan and as it starts to solidify, push into
+                    the center so as to create a "fluffy" texture for the scrambled eggs.</li>
+                <li>When the toast is browned to your liking, spread the avocado onto each slice</li>
+                <li>Take some of the scrambled eggs and place onto the avocado spread</li>
+                <li>Sprinkle on some mozarella cheese on top of each toast</li>
+                <li>Add salt and pepper to taste</li>
+            </ol>
+        </div>
 
     </body>
 </html>
