--- a/index.html
+++ b/index.html
@@ -4,14 +4,18 @@
     <head>
         <meta charset="UTF-8">
         <title>Odin Recipes</title>
+
+        <link rel="stylesheet" href="style.css" />
     </head>
 
     <body>
-        <h1>Odin Recipes</h1>
-        <ul>
-            <li><a href="./recipes/bread.html" target="_blank" rel="noopener noreferrer">Lemon Blueberry Bread</a></li>
-            <li><a href="./recipes/toast.html" target="_blank" rel="noopener noreferrer">Scrambled Eggs and Avocado Toast</a></li>
-            <li><a href="./recipes/omelette.html" target="_blank" rel="noopener noreferrer">Chicken, Cheese, and Vegetable Omlette</a></li>
-        </ul>
+        <h1 class="title">Odin Recipes</h1>
+        <div class="links">
+            <ul>
+                <li><a href="./recipes/bread.html" target="_blank" rel="noopener noreferrer">Lemon Blueberry Bread</a></li>
+                <li><a href="./recipes/toast.html" target="_blank" rel="noopener noreferrer">Scrambled Eggs and Avocado Toast</a></li>
+                <li><a href="./recipes/omelette.html" target="_blank" rel="noopener noreferrer">Chicken, Cheese, and Vegetable Omelette</a></li>
+            </ul>
+        </div>
     </body>
 </html>
