update bread page and add background

--- a/recipes/bread.html
+++ b/recipes/bread.html
@@ -13,12 +13,14 @@
         <img src="../images/bread.jpeg" alt="baked lemon blueberry bread" 
         width = 600 height = 280> 
         
-        <p>This delicious bread combines the sourness of lemons with the sweetness of blueberries, 
-            creating the perfect mix of flavors for a light and tasty treat. I don't even normally like
-            bluerries, but this recipe changed that for me. This recipe comes from 
-            <a href="https://www.tasteofhome.com/recipes/lemon-blueberry-bread/" target="_blank" rel="noopener noreferrer">Taste of Home</a>, 
-            full credit to them, my website is purely for learning purposes.
-        </p>
+        <div class ="description-box">
+            <p>This delicious bread combines the sourness of lemons with the sweetness of blueberries, 
+                creating the perfect mix of flavors for a light and tasty treat. I don't even normally like
+                bluerries, but this recipe changed that for me. This recipe comes from 
+                <a href="https://www.tasteofhome.com/recipes/lemon-blueberry-bread/" target="_blank" rel="noopener noreferrer">Taste of Home</a>, 
+                full credit to them, my website is purely for learning purposes.
+            </p>
+        </div>
         
         <div class="ingredients-box">
             <h3>Ingredients</h3>
